ESPHome/templates/Ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    lan-mode: private
    wan-mode: public

  name: esphome-route
spec:
  hostnames:
    - esphome.writemy.codes
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gw
      namespace: kube-system

  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: esphome
          port: 6052
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 900s
        request: 900s
